--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
+    "@agm/core": "^1.0.0-beta.2",
+    "@agm/snazzy-info-window": "^1.0.0-beta.2",
+    "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.0.4",
     "@angular/common": "^5.1.0",
     "@angular/compiler": "^5.1.0",
     "@angular/core": "^5.1.0",
     "@angular/forms": "^5.1.0",
     "@angular/http": "^5.1.0",
+    "@angular/material": "^5.0.4",
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "core-js": "^2.4.1",
+    "roboto-fontface": "^0.8.0",
     "rxjs": "^5.5.6",
+    "snazzy-info-window": "^1.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
