--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.2",
-    "@agm/snazzy-info-window": "^1.0.0-beta.2",
     "@angular/animations": "^5.2.0",
     "@angular/cdk": "^5.0.4",
     "@angular/common": "^5.1.0",
@@ -25,18 +23,21 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@asymmetrik/ngx-leaflet": "^3.0.2",
     "core-js": "^2.4.1",
+    "leaflet": "^1.3.1",
     "roboto-fontface": "^0.8.0",
     "rxjs": "^5.5.6",
     "snazzy-info-window": "^1.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.4",
+    "@angular/cli": "1.6.5",
     "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/leaflet": "^1.2.5",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
